[package]
name = "nm"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
cfg-if = "0.1.0"
ctrlc = "3.1.2"
failure = "0.1.5"
libc = "0.2.0"
nix = "0.13.0"
num = "0.2.0"
slice-deque = "0.2.3"

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.3.1"

[dev-dependencies]
rand = "0.8"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]